[package]
name = "simple-interop-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
blast_core = { git = "https://github.com/bjohnson5/blast.git", branch = "main" }
tokio = { version = "1.37.0", features = ["full"] }
ctrlc = "3.3.0"
anyhow = { version = "1.0.69", features = ["backtrace"] }
serde_json = "1.0.104"
log = "0.4.20"
simple_logger = "4.2.0"
